--- a/Braceletsproducer.html
+++ b/Braceletsproducer.html
@@ -135,7 +135,8 @@
         setInterval(saveChanges, 5000);
     </script>
     
-    <button class="plus-button">+</button>
+<button onclick="window.location.href='Productpage.html';">+</button>
+
 
     <!-- Navigation Bar -->
     <div class="navbar">
