--- a/Ringsproducer.html
+++ b/Ringsproducer.html
@@ -135,6 +135,8 @@
         // Auto-save every 5 seconds
         setInterval(saveChanges, 5000);
     </script>
+    <button onclick="window.location.href='Productpage.html';">+</button>
+
     
 
     <!-- Navigation Bar -->
